--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         Orlando, Fl, USA · (937) 232-2262 ·
                         <a href="mailto:name@email.com">Azzam@knights.ucf.edu</a>
                     </div>
-                    <p class="lead mb-5">I am currently doing a research on TinyML under the supervision of professor Mingjie Lin in the Autonomous lab at the University of Central Florida.</p>
+                    <p class="lead mb-5">I am currently doing a research on TinyML under the supervision of professor Mingjie Lin in the Autonomous lab at the University of Central Florida. I am also working on some projects for Cyber-Physical System and Intelligent IoT</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-facebook-f">https://www.facebook.com/azzam.alhussain.1</i></a>
                     </div>
                 </div>
             </section>
