--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-twitter">https://twitter.com/Azzam_291</i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f">https://www.facebook.com/azzam.alhussain.1</i></a>
                     </div>
                 </div>
