--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#https://twitter.com/Azzam_291"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#"><i class="https://twitter.com/Azzam_291 fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
