--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="https://twitter.com/Azzam_291 fa-twitter"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
@@ -62,20 +62,30 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Central Florida</h3>
+                            <div class="subheading mb-0">Ph.D.</div>
+                            <div>Electrical Engineering - System Track</div>
+                            <p>GPA: 3.93</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2020 - Dec 2023</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">University of Dayton</h3>
+                            <div class="subheading mb-0">MS</div>
+                            <div>Electrical Engineering - System Track</div>
+                            <p>GPA: 3.93</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2018 - Dec 2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Jubail Industrial College</h3>
+                            <div class="subheading mb-0">BS</div>
+                            <div>Instrumentation and Control Engineering</div>
+                            <p>GPA: 3.37</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2008 - Sep 2014</span></div>
                     </div>
                 </div>
             </section>
@@ -86,35 +96,32 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Instructor, Instrumentation and Control Engineering</h3>
+                            <div class="subheading mb-3">Royal Commission for Jubail (Jubail Industrial College)</div>
+                            <p>Revise the theory and laboratory courses and start giving laboratories classes to the undergraduate students in the Electrical and Electronics principles, Instrumentation 1 and Instrumentation Engineering courses.</p>
+                            <p>Designing and programming projects on Simatic Manager PLC and Arduino kit platform.</p>
+                            <p>Skilled in building mini-instrument projects using Arduino, controlling and delivering excellent training to the students, and perfect communication in English.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2015 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">World Associate Student</h3>
+                            <div class="subheading mb-3">Intensive English Program (IEP) at the University of Dayton</div>
+                            <p>Interacting with IEP students to answer questions and direct them to the correct resources.</p>
+                            <p>Registering student schedules, scheduling appointments, preparing materials, writing business letters, and help with social and cultural activities.</p>
+                            <p>Assisting IEP faculty and staff with special projects as needed.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Dec 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Project Planning, Cost and Control Engineer</h3>
+                            <div class="subheading mb-3">Dar Al-Riyadh (contract employment with SABIC)</div>
+                            <p>Coordinate, making plans for the new projects and determine the cost estimate for each project.</p>
+                            <p>Indicate the profit before going into any project</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov 2014 - Feb 2015</span></div>
                     </div>
                 </div>
             </section>
