--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research interests">Research Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://app.box.com/s/zy6tszpbf271c91y6o6rerspkxpa1q70">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://scholar.google.com/citations?hl=ar&user=TFeXco8AAAAJ&view_op=list_works&gmla=AJsN-F40ZM_rRlpv5PqaWTHnS9RYZjdPCUwerbQAZ44b-OMxNBOVg15kML6PczO31JE9uwS-zShsy7mDAzfNrZ1VwJzXzvPc8pqIJbHJAqp2OdmRPTePV1rJ_f301P9jDHYwIIIY6IBN">Scholar</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.researchgate.net/profile/Azzam-Alhussain">Publication</a></li>
                 </ul>
             </div>
         </nav>
@@ -46,7 +44,7 @@
                         Orlando, Fl, USA · (937) 232-2262 ·
                         <a href="mailto:name@email.com">Azzam@knights.ucf.edu</a>
                     </div>
-                    <p class="lead mb-5">I am currently doing a research on TinyML under the supervision of professor Mingjie Lin in the Autonomous lab at the University of Central Florida. I am also working on some projects for Cyber-Physical System and Intelligent IoT</p>
+                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at the University of Central Flroida started in Jan 2020. I am currently in the first stage of doing a research on TinyML under the supervision of professor Mingjie Lin in the Autonomous lab. We are investigating a new efficient approach for implementing Machine Learning algorithms and models into small edge devices such as MCUs 8051 to make it smart and interactve at very low cost. I am also working on some personal research projects for Cyber-Physical System and Intelligent IoT</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/azzamabdulrahman/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Azzam-Alhussain"><i class="fab fa-github"></i></a>
@@ -56,138 +54,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-             <!-- Education-->
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Central Florida</h3>
-                            <div class="subheading mb-0">Ph.D.</div>
-                            <div>Electrical Engineering - System Track</div>
-                            <p>GPA: 3.93</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2020 - Dec 2023</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Dayton</h3>
-                            <div class="subheading mb-0">MS</div>
-                            <div>Electrical Engineering - System Track</div>
-                            <p>GPA: 3.93</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2018 - Dec 2019</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Jubail Industrial College</h3>
-                            <div class="subheading mb-0">BS</div>
-                            <div>Instrumentation and Control Engineering</div>
-                            <p>GPA: 3.37</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Oct 2008 - Sep 2014</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Instructor, Instrumentation and Control Engineering</h3>
-                            <div class="subheading mb-3">Royal Commission for Jubail (Jubail Industrial College)</div>
-                            <p>Revise the theory and laboratory courses and start giving laboratories classes to the undergraduate students in the Electrical and Electronics principles, Instrumentation 1 and Instrumentation Engineering courses.</p>
-                            <p>Designing and programming projects on Simatic Manager PLC and Arduino kit platform.</p>
-                            <p>Skilled in building mini-instrument projects using Arduino, controlling and delivering excellent training to the students, and perfect communication in English.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Feb 2015 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">World Associate Student</h3>
-                            <div class="subheading mb-3">Intensive English Program (IEP) at the University of Dayton</div>
-                            <p>Interacting with IEP students to answer questions and direct them to the correct resources.</p>
-                            <p>Registering student schedules, scheduling appointments, preparing materials, writing business letters, and help with social and cultural activities.</p>
-                            <p>Assisting IEP faculty and staff with special projects as needed.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Dec 2019</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Project Planning, Cost and Control Engineer</h3>
-                            <div class="subheading mb-3">Dar Al-Riyadh (contract employment with SABIC)</div>
-                            <p>Coordinate, making plans for the new projects and determine the cost estimate for each project.</p>
-                            <p>Indicate the profit before going into any project</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Nov 2014 - Feb 2015</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Advanced Arduino – Wiring, Programming and Interfacing 
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                           Industrial Automation – PLC, HMI & VFD
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Train of Trainers (TOT)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Leadership for Engineers
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Research Interests-->
-            <section class="resume-section" id="research interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Research Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Student member at the International Society of Automation (ISA)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Student member at the American Society of Engineering Education (ASEE)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Student member at the Institute of Electrical & Electronics Engineers (IEEE) 
-                        </li>
-                        <li>
-                    </ul>
-                </div>
-            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
