--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Azzam A Alhussain</span>
+                <span class="d-block d-lg-none">Azzam Alhussain</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-unnamed (6) rounded-circle mx-auto mb-2" src="assets/img/unnamed (6).jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -38,13 +38,13 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        <span class="text-primary">Azzam A Alhussain</span>
+                        <span class="text-primary">Azzam Alhussain</span>
                     </h1>
                     <div class="subheading mb-5">
                         Orlando, Fl, USA · (937) 232-2262 ·
-                        <a href="mailto:name@email.com">Azzam@knights.ucf.edu</a>
+                        <a style="color:blue;" href="mailto:name@email.com">Azzam@knights.ucf.edu</a>
                     </div>
-                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at the University of Central Flroida started in Jan 2020. I am currently in the first stage of doing a research on TinyML under the supervision of professor Mingjie Lin in the Autonomous lab. We are investigating a new efficient approach for implementing Machine Learning algorithms and models into small edge devices such as MCUs 8051 to make it smart and interactve at very low cost. I am also working on some personal research projects for Cyber-Physical System and Intelligent IoT</p>
+                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at <a href="https://www.ucf.edu/">the University of Central Flroida</a>  started in Jan 2020. I am currently in the first stage of doing a research on <b>TinyML</b> under the supervision of professor <a href="https://www.ece.ucf.edu/person/mingjie-lin/">Mingjie Lin</a> in the Autonomous lab. We are investigating a new efficient approach for implementing Machine Learning and Deep Learning algorithms and models into small edge devices such as Arm Cortex MCUs to make them smart and interactve at very low cost. I am also working on some personal research projects for <b>Cyber-Physical System and Intelligent IoT</b></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/azzamabdulrahman/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Azzam-Alhussain"><i class="fab fa-github"></i></a>
