--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://app.box.com/s/zy6tszpbf271c91y6o6rerspkxpa1q70">Resume</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://scholar.google.com/citations?hl=ar&user=TFeXco8AAAAJ&view_op=list_works&gmla=AJsN-F40ZM_rRlpv5PqaWTHnS9RYZjdPCUwerbQAZ44b-OMxNBOVg15kML6PczO31JE9uwS-zShsy7mDAzfNrZ1VwJzXzvPc8pqIJbHJAqp2OdmRPTePV1rJ_f301P9jDHYwIIIY6IBN">Scholar</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.researchgate.net/profile/Azzam-Alhussain">Publication</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://calendly.com/mr-azzam">Schedule an appointment</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,7 +45,7 @@
                         Orlando, Fl, USA · (937) 232-2262 ·
                         <a style="color:blue;" href="mailto:name@email.com">mr.azzam@ieee.org</a>
                     </div>
-                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at <a href="https://www.ucf.edu/">the University of Central Flroida</a>  started in Jan 2020. I am currently in the first stage of doing a research on <b>TinyML</b> under the supervision of professor <a href="https://www.ece.ucf.edu/person/mingjie-lin/">Mingjie Lin</a> in the Autonomous Computing lab. We are investigating a new efficient approach for implementing Machine Learning and Deep Learning algorithms and models into small edge devices such as Arm Cortex MCUs to make them smart and interactve at very low cost. I am also working on some personal research projects for <b>Cyber-Physical System and Intelligent IoT</b></p>
+                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at <a href="https://www.ucf.edu/">the University of Central Flroida</a>. I am currently researching new methods in <b>Hardware Optimization for AI algorithms on the Edge</b> under the supervision of professor <a href="https://www.ece.ucf.edu/person/mingjie-lin/">Mingjie Lin</a> in the Autonomous Computing lab. We are working toward new reconfigurable computing efficient approaches for implementing and accelerating Deep Learning algorithms using HW/SW co-design into small Embedded systems and SoC FPGAs. I am also working on some personal projects for <b>Control Systems Engineering</b> and <b>Intelligent IoT</b></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/azzamabdulrahman/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Azzam-Alhussain"><i class="fab fa-github"></i></a>
