--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <span class="text-primary">Azzam Alhussain</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Orlando, Fl, USA · (937) 232-2262 ·
+                        Orlando, Fl, USA ·
                         <a style="color:blue;" href="mailto:name@email.com">mr.azzam@ieee.org</a>
                     </div>
-                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at <a href="https://www.ucf.edu/">the University of Central Flroida</a>. I am currently researching and scaling up new methods in <b>Hardware Acceleration for Optimized Neural Network on the Edge</b> under the supervision of professor <a href="https://www.ece.ucf.edu/person/mingjie-lin/">Mingjie Lin</a> in the Autonomous Computing lab. We are working toward new reconfigurable computing and compression approaches for implementing and shrinking Deep Neural Network models into SoC FPGAs using HW/SW Co-design with minimal loss of accuracy. I am also have interests in researching an inference-driven efficient DNN Pruning and Quantization methods for the Applied Industrial Inttelligece application of <b>Edge AI</b> and <b>Embedded ML.</b></p>
+                    <p class="lead mb-5">I am an Electrical Engineering Ph.D. student at <a href="https://www.ucf.edu/">the University of Central Flroida</a> working under the supervision of professor <a href="https://www.ece.ucf.edu/person/mingjie-lin/">Mingjie Lin</a> in the Autonomous Computing lab. We are researching the area of <b>Hardware Acceleration for Optimized Neural Network on the Edge</b>, and working toward new reconfigurable computing and compression approaches for implementing and shrinking up Deep Neural Network algorithms into SoC FPGAs using HW/SW Co-design with minimal loss of accuracy. I am also having interest in exploring an inference-driven efficient DNN Pruning and Quantization methods for the Applied Inttelligece application of <b>Edge AI</b> and <b>Embedded ML.</b></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/azzamabdulrahman/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Azzam-Alhussain"><i class="fab fa-github"></i></a>
