--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        <span class="text-primary">Azzam Alhussain</span>
+                        <span class="text-primary">Azzam AA Alhussain</span>
                     </h1>
                     <div class="subheading mb-5">
                         Orlando, Fl, USA ·
