--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/azzamabdulrahman/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Azzam-Alhussain"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://twitter.com/Azzam_291"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://x.com/Dr_elec_Azzam"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/azzam.alhussain.1"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
